fixed event bubbling issue with cropping - moved js into its own file

--- a/mysite/users/static/users/main.css
+++ b/mysite/users/static/users/main.css
@@ -235,6 +235,9 @@
   list-style: none
 }
 
+label[for="id_image"] {
+    display: none;
+}
 
 
 
